// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryModal should render with a subcategory 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="light"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#121d25",
        "borderColor": "rgba(255, 255, 255, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 86,
        "paddingLeft": 22,
        "paddingRight": 22,
        "paddingTop": 22,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 11,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Medium",
              "fontSize": 27,
              "marginVertical": 11,
            },
            {
              "textAlign": "center",
            },
            {
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Choose a Category
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 22,
          "marginHorizontal": 22,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#00f1a2",
            "borderColor": "#00f1a2",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#06090c",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Income
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#00f1a2",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Expense
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#00f1a2",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Transfer
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#00f1a2",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Exchange
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={false}
      focusable={true}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 11,
            "flexDirection": "row",
            "minHeight": 67,
            "paddingHorizontal": 22,
          },
          {
            "flexGrow": 0,
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
            "paddingLeft": 22,
            "paddingRight": 65,
            "paddingVertical": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "bottom": 0,
              "left": 22,
              "position": "absolute",
              "right": 22,
            },
            {
              "borderColor": undefined,
              "right": 11,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderBottomLeftRadius": 11,
              "borderBottomWidth": 1,
              "borderLeftWidth": 1,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 11,
              "borderTopWidth": 1,
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 22,
            },
            {
              "borderColor": undefined,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderBottomRightRadius": 11,
              "borderBottomWidth": 1,
              "borderLeftWidth": 0,
              "borderRightWidth": 1,
              "borderTopRightRadius": 11,
              "borderTopWidth": 1,
              "bottom": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 22,
            },
            {
              "borderColor": undefined,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "left": 22,
              "position": "absolute",
              "right": 22,
              "top": 0,
            },
            {
              "borderColor": undefined,
              "left": 34,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "height": 67,
              "justifyContent": "center",
              "left": 0,
              "paddingHorizontal": 22,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "paddingLeft": 22,
              "paddingRight": 65,
            },
          ]
        }
      >
        <Text
          accessible={true}
          numberOfLines={1}
          onLayout={[Function]}
          style={
            [
              {
                "alignSelf": "flex-start",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "padding": 0,
              },
              {
                "color": undefined,
                "transform": [
                  {
                    "translateX": 6,
                  },
                  {
                    "translateY": -34,
                  },
                  {
                    "scale": 0.75,
                  },
                ],
              },
            ]
          }
          testID="undefined.labelText"
        >
          Sub-category
        </Text>
      </View>
      <View
        style={
          {
            "bottom": -45,
            "height": 45,
            "left": 0,
            "paddingLeft": 22,
            "paddingRight": 39,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <Text
          accessible={true}
          numberOfLines={2}
          style={
            [
              {
                "color": "#E85466",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 17,
              },
              {
                "opacity": 0,
              },
            ]
          }
          testID="undefined.subText"
        />
      </View>
      <Text
        accessible={true}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          [
            {
              "bottom": -10,
              "fontFamily": "Quicksand-Regular",
              "fontSize": 17,
              "position": "absolute",
              "right": 28,
            },
            {
              "color": undefined,
              "opacity": 1,
              "transform": [
                {
                  "translateX": 0,
                },
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
        testID="undefined.charLimit"
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        testID="undefined.clearIcon"
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 12,
              },
              {
                "color": "rgba(255, 255, 255, .75)",
                "fontSize": 22,
                "padding": 22,
              },
              {
                "fontFamily": "anticon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        autoCapitalize="words"
        autoFocus={true}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="done"
        secureTextEntry={false}
        selectionColor="#FFFFFF"
        style={
          [
            {
              "color": "#FFFFFF",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Quicksand-Regular",
              "padding": 0,
            },
            {
              "fontSize": 22,
            },
          ]
        }
        testID="undefined.textInput"
        textAlignVertical="top"
        value="Paycheck"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            [
              {
                "display": "Income: Paycheck",
                "new": true,
                "raw": "Income:Paycheck",
                "selected": true,
              },
              {
                "display": "Exchange: Paycheck",
                "new": true,
                "raw": "Exchange:Paycheck",
                "selected": false,
              },
              {
                "display": "Expense: Paycheck",
                "new": true,
                "raw": "Expense:Paycheck",
                "selected": false,
              },
              {
                "display": "Transfer: Paycheck",
                "new": true,
                "raw": "Transfer:Paycheck",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": [
                {
                  "display": "Income: Paycheck",
                  "new": true,
                  "raw": "Income:Paycheck",
                  "selected": true,
                },
                {
                  "display": "Exchange: Paycheck",
                  "new": true,
                  "raw": "Exchange:Paycheck",
                  "selected": false,
                },
                {
                  "display": "Expense: Paycheck",
                  "new": true,
                  "raw": "Expense:Paycheck",
                  "selected": false,
                },
                {
                  "display": "Transfer: Paycheck",
                  "new": true,
                  "raw": "Transfer:Paycheck",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={{}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": {
                "size": undefined,
                "span": undefined,
              },
              "props": {
                "contentContainerStyle": {
                  "paddingBottom": 67,
                },
                "data": [
                  {
                    "display": "Income: Paycheck",
                    "new": true,
                    "raw": "Income:Paycheck",
                    "selected": true,
                  },
                  {
                    "display": "Exchange: Paycheck",
                    "new": true,
                    "raw": "Exchange:Paycheck",
                    "selected": false,
                  },
                  {
                    "display": "Expense: Paycheck",
                    "new": true,
                    "raw": "Expense:Paycheck",
                    "selected": false,
                  },
                  {
                    "display": "Transfer: Paycheck",
                    "new": true,
                    "raw": "Transfer:Paycheck",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            {
              "contentContainerStyle": {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "zIndex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            [
              1187109,
              856825125,
              3205635365,
              4279377189,
            ]
          }
          endPoint={
            {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.2,
              0.75,
              1,
            ]
          }
          pointerEvents="none"
          startPoint={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "bottom": 0,
              "height": 67,
              "position": "absolute",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "marginBottom": -22,
          "opacity": 1,
          "padding": 22,
        }
      }
    >
      <Text
        accessibilityHint="Close modal"
        allowFontScaling={false}
        style={
          [
            {
              "color": "#00f1a2",
              "fontSize": 28,
            },
            undefined,
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`CategoryModal should render with an empty subcategory 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "transparent",
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <BlurView
      blurAmount={10}
      blurType="light"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
  <View
    collapsable={false}
    style={
      {
        "alignSelf": "flex-end",
        "backgroundColor": "#121d25",
        "borderColor": "rgba(255, 255, 255, 0)",
        "borderTopLeftRadius": 22,
        "borderTopRightRadius": 22,
        "borderWidth": 0,
        "flexDirection": undefined,
        "flexShrink": 1,
        "justifyContent": undefined,
        "marginBottom": -64,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "maxHeight": undefined,
        "overflow": "visible",
        "paddingBottom": 86,
        "paddingLeft": 22,
        "paddingRight": 22,
        "paddingTop": 22,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 10,
        "transform": [
          {
            "translateY": 1334,
          },
        ],
        "width": 512,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "margin": 11,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontFamily": "Quicksand-Medium",
              "fontSize": 27,
              "marginVertical": 11,
            },
            {
              "textAlign": "center",
            },
            {
              "paddingBottom": 0,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        Choose a Category
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 22,
          "marginHorizontal": 22,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#00f1a2",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Income
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#00f1a2",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Expense
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#00f1a2",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Transfer
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#00f1a2",
            "borderColor": "#00f1a2",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "opacity": 1,
            "padding": 7,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          minimumFontScale={0.25}
          numberOfLines={1}
          style={
            {
              "color": "#06090c",
              "fontFamily": "Quicksand-Bold",
              "fontSize": 14,
              "marginHorizontal": 7,
            }
          }
        >
          Exchange
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={false}
      focusable={true}
      onClick={[Function]}
      onLayout={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255, 255, 255, 0)",
            "borderRadius": 11,
            "flexDirection": "row",
            "minHeight": 67,
            "paddingHorizontal": 22,
          },
          {
            "flexGrow": 0,
            "marginBottom": 11,
            "marginLeft": 11,
            "marginRight": 11,
            "marginTop": 11,
            "paddingLeft": 22,
            "paddingRight": 65,
            "paddingVertical": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "bottom": 0,
              "left": 22,
              "position": "absolute",
              "right": 22,
            },
            {
              "borderColor": undefined,
              "right": 11,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderBottomLeftRadius": 11,
              "borderBottomWidth": 1,
              "borderLeftWidth": 1,
              "borderRightWidth": 0,
              "borderTopLeftRadius": 11,
              "borderTopWidth": 1,
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": 22,
            },
            {
              "borderColor": undefined,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderBottomRightRadius": 11,
              "borderBottomWidth": 1,
              "borderLeftWidth": 0,
              "borderRightWidth": 1,
              "borderTopRightRadius": 11,
              "borderTopWidth": 1,
              "bottom": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 22,
            },
            {
              "borderColor": undefined,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "borderTopWidth": 1,
              "left": 22,
              "position": "absolute",
              "right": 22,
              "top": 0,
            },
            {
              "borderColor": undefined,
              "left": 22,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "height": 67,
              "justifyContent": "center",
              "left": 0,
              "paddingHorizontal": 22,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "paddingLeft": 22,
              "paddingRight": 65,
            },
          ]
        }
      >
        <Text
          accessible={true}
          numberOfLines={1}
          onLayout={[Function]}
          style={
            [
              {
                "alignSelf": "flex-start",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 22,
                "padding": 0,
              },
              {
                "color": undefined,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -0,
                  },
                  {
                    "scale": 1,
                  },
                ],
              },
            ]
          }
          testID="undefined.labelText"
        >
          Sub-category
        </Text>
      </View>
      <View
        style={
          {
            "bottom": -45,
            "height": 45,
            "left": 0,
            "paddingLeft": 22,
            "paddingRight": 39,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <Text
          accessible={true}
          numberOfLines={2}
          style={
            [
              {
                "color": "#E85466",
                "fontFamily": "Quicksand-Regular",
                "fontSize": 17,
              },
              {
                "opacity": 0,
              },
            ]
          }
          testID="undefined.subText"
        />
      </View>
      <Text
        accessible={true}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          [
            {
              "bottom": -10,
              "fontFamily": "Quicksand-Regular",
              "fontSize": 17,
              "position": "absolute",
              "right": 28,
            },
            {
              "color": undefined,
              "opacity": 0,
              "transform": [
                {
                  "translateX": 6,
                },
                {
                  "scale": 0,
                },
              ],
            },
          ]
        }
        testID="undefined.charLimit"
      />
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        accessible={true}
        autoCapitalize="words"
        autoFocus={true}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="done"
        secureTextEntry={false}
        selectionColor="#FFFFFF"
        style={
          [
            {
              "color": "#FFFFFF",
              "flexGrow": 1,
              "flexShrink": 1,
              "fontFamily": "Quicksand-Regular",
              "padding": 0,
            },
            {
              "fontSize": 22,
            },
          ]
        }
        testID="undefined.textInput"
        textAlignVertical="top"
        value=""
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "overflow": "hidden",
          }
        }
      >
        <RCTScrollView
          applyWindowCorrection={[Function]}
          canChangeSize={true}
          contentContainerStyle={
            {
              "backgroundColor": undefined,
              "minHeight": 1,
              "minWidth": 1,
              "paddingLeft": 0,
              "paddingRight": 0,
            }
          }
          contentHeight={0}
          contentWidth={0}
          data={
            [
              {
                "display": "Exchange: Buy Bitcoin",
                "new": false,
                "raw": "Exchange:Buy Bitcoin",
                "selected": true,
              },
              {
                "display": "Exchange: Sell Bitcoin",
                "new": false,
                "raw": "Exchange:Sell Bitcoin",
                "selected": true,
              },
              {
                "display": "Expense: Air Travel",
                "new": false,
                "raw": "Expense:Air Travel",
                "selected": false,
              },
              {
                "display": "Expense: Alcohol & Bars",
                "new": false,
                "raw": "Expense:Alcohol & Bars",
                "selected": false,
              },
            ]
          }
          dataProvider={
            DataProvider {
              "_data": [
                {
                  "display": "Exchange: Buy Bitcoin",
                  "new": false,
                  "raw": "Exchange:Buy Bitcoin",
                  "selected": true,
                },
                {
                  "display": "Exchange: Sell Bitcoin",
                  "new": false,
                  "raw": "Exchange:Sell Bitcoin",
                  "selected": true,
                },
                {
                  "display": "Expense: Air Travel",
                  "new": false,
                  "raw": "Expense:Air Travel",
                  "selected": false,
                },
                {
                  "display": "Expense: Alcohol & Bars",
                  "new": false,
                  "raw": "Expense:Alcohol & Bars",
                  "selected": false,
                },
              ],
              "_firstIndexToProcess": 0,
              "_hasStableIds": true,
              "_requiresDataChangeHandling": false,
              "_size": 4,
              "getStableId": [Function],
              "rowHasChanged": [Function],
            }
          }
          disableRecycling={false}
          estimatedItemSize={67}
          extendedState={{}}
          externalScrollView={[Function]}
          finalRenderAheadOffset={250}
          forceNonDeterministicRendering={true}
          horizontal={false}
          initialOffset={0}
          initialRenderIndex={0}
          isHorizontal={false}
          keyExtractor={[Function]}
          keyboardShouldPersistTaps="handled"
          layoutProvider={
            GridLayoutProviderWithProps {
              "_acceptableRelayoutDelta": 1,
              "_getHeightOrWidth": [Function],
              "_getLayoutTypeForIndex": [Function],
              "_getSpan": [Function],
              "_hasExpired": false,
              "_maxSpan": 1,
              "_setLayoutForType": [Function],
              "_tempDim": {
                "height": 0,
                "width": 0,
              },
              "averageWindow": AverageWindow {
                "currentAverage": 67,
                "currentCount": 1,
                "inputValues": [
                  67,
                ],
                "nextIndex": 1,
              },
              "defaultEstimatedItemSize": 100,
              "layoutObject": {
                "size": undefined,
                "span": undefined,
              },
              "props": {
                "contentContainerStyle": {
                  "paddingBottom": 67,
                },
                "data": [
                  {
                    "display": "Exchange: Buy Bitcoin",
                    "new": false,
                    "raw": "Exchange:Buy Bitcoin",
                    "selected": true,
                  },
                  {
                    "display": "Exchange: Sell Bitcoin",
                    "new": false,
                    "raw": "Exchange:Sell Bitcoin",
                    "selected": true,
                  },
                  {
                    "display": "Expense: Air Travel",
                    "new": false,
                    "raw": "Expense:Air Travel",
                    "selected": false,
                  },
                  {
                    "display": "Expense: Alcohol & Bars",
                    "new": false,
                    "raw": "Expense:Alcohol & Bars",
                    "selected": false,
                  },
                ],
                "estimatedItemSize": 67,
                "keyExtractor": [Function],
                "keyboardShouldPersistTaps": "handled",
                "numColumns": 1,
                "renderItem": [Function],
              },
              "renderWindowInsets": {
                "height": 0,
                "width": 0,
              },
              "shouldRefreshWithAnchoring": true,
            }
          }
          maxRenderAhead={750}
          numColumns={1}
          onEndReached={[Function]}
          onEndReachedThreshold={0}
          onEndReachedThresholdRelative={0}
          onItemLayout={[Function]}
          onLayout={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onSizeChanged={[Function]}
          onVisibleIndicesChanged={[Function]}
          removeClippedSubviews={false}
          renderAheadOffset={0}
          renderAheadStep={250}
          renderContentContainer={[Function]}
          renderItem={[Function]}
          renderItemContainer={[Function]}
          rowRenderer={[Function]}
          scrollEventThrottle={16}
          scrollThrottle={16}
          scrollViewProps={
            {
              "contentContainerStyle": {
                "backgroundColor": undefined,
                "minHeight": 1,
                "minWidth": 1,
                "paddingLeft": 0,
                "paddingRight": 0,
              },
              "onLayout": [Function],
              "onScrollBeginDrag": [Function],
              "refreshControl": undefined,
              "style": {
                "minHeight": 1,
                "minWidth": 1,
              },
            }
          }
          style={
            {
              "minHeight": 1,
              "minWidth": 1,
            }
          }
          suppressBoundedSizeException={true}
          windowCorrectionConfig={
            {
              "applyToInitialOffset": true,
              "applyToItemScroll": true,
              "value": {
                "endCorrection": 0,
                "startCorrection": 0,
                "windowShift": -0,
              },
            }
          }
        >
          <View>
            <View
              style={
                {
                  "flexDirection": "column",
                }
              }
            >
              <AutoLayoutView
                enableInstrumentation={false}
                horizontal={false}
                onBlankAreaEvent={[Function]}
                onLayout={[Function]}
                renderAheadOffset={0}
                scrollOffset={0}
                style={
                  {
                    "height": 0,
                    "width": 0,
                  }
                }
                windowSize={0}
              />
            </View>
          </View>
        </RCTScrollView>
      </View>
      <View
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "zIndex": 1,
          }
        }
      >
        <BVLinearGradient
          colors={
            [
              1187109,
              856825125,
              3205635365,
              4279377189,
            ]
          }
          endPoint={
            {
              "x": 0,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.2,
              0.75,
              1,
            ]
          }
          pointerEvents="none"
          startPoint={
            {
              "x": 0,
              "y": 0,
            }
          }
          style={
            {
              "bottom": 0,
              "height": 67,
              "position": "absolute",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "marginBottom": -22,
          "opacity": 1,
          "padding": 22,
        }
      }
    >
      <Text
        accessibilityHint="Close modal"
        allowFontScaling={false}
        style={
          [
            {
              "color": "#00f1a2",
              "fontSize": 28,
            },
            undefined,
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;
